--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/imagegenius/baseimage-ubuntu:{% if cpu_architecture == "amd64" %}mantic{% else %}arm64v8-mantic{% endif %}
+FROM ghcr.io/imagegenius/baseimage-ubuntu:mantic
 
 # set version label
 ARG BUILD_DATE
