--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -34,7 +34,6 @@ RUN \
   {% endif -%}
   apt-get update && \
   apt-get install --no-install-recommends -y \
-    $(if [ $(arch) = "x86_64" ]; then echo "intel-media-va-driver-non-free"; fi) \
     autoconf \
     bc \
     build-essential \
@@ -79,9 +78,7 @@ RUN \
     unzip && \
   echo "**** install runtime packages ****" && \
   apt-get install --no-install-recommends -y \
-    {% if cpu_architecture == "amd64" -%}
-    intel-media-va-driver-non-free \
-    {% endif -%}
+    $(if [ $(arch) = "x86_64" ]; then echo "intel-media-va-driver-non-free"; fi) \
     {% if machine_learning == True and gpu_acceleration_name == "cuda" -%}
     libcublas12 \
     libcublaslt12 \
@@ -343,6 +340,7 @@ RUN \
     /etc/apt/sources.list.d/node.list \
     {% if machine_learning == True and gpu_acceleration_name == "openvino" -%}
     /etc/apt/sources.list.d/openvino.list \
+    /usr/share/keyrings/intel-graphics.gpg \
     {% endif -%}
     /root/.cache \
     /root/.cpanm \
