--- a/templates/svc-machine-learning/run.j2
+++ b/templates/svc-machine-learning/run.j2
@@ -7,7 +7,7 @@
 # stop machine learning from starting
 [[ "${DISABLE_MACHINE_LEARNING}" == "true" || "${IMMICH_MACHINE_LEARNING_URL}" != "http://127.0.0.1:3003" ]] && tail -f /dev/null
 
-{% if machine_learning == True and gpu_acceleration_name != "openvino" -%}
+{% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
 lib_path="/usr/lib/$(arch)-linux-gnu/libmimalloc.so.2"
 export LD_PRELOAD="$lib_path"
 {% endif -%}
