--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -10,7 +10,7 @@ LABEL maintainer="martabal"
 
 # environment settings
 ENV \
-  {% if machine_learning == True -%}
+  {% if machine_learning_provider -%}
   IMMICH_MACHINE_LEARNING_URL="http://127.0.0.1:3003" \
   MACHINE_LEARNING_CACHE_FOLDER="/config/machine-learning" \
   TRANSFORMERS_CACHE="/config/machine-learning" \
@@ -28,7 +28,7 @@ RUN \
   echo "**** install build packages ****" && \
   echo "deb [signed-by=/usr/share/keyrings/nodesource-repo.gpg] https://deb.nodesource.com/node_20.x nodistro main" >>/etc/apt/sources.list.d/node.list && \
   curl -s https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor | tee /usr/share/keyrings/nodesource-repo.gpg >/dev/null && \
-  {% if machine_learning == True and gpu_acceleration_name == "openvino" -%}
+  {% if machine_learning_provider == "openvino" -%}
   echo "deb [arch=amd64 signed-by=/usr/share/keyrings/intel-graphics.gpg] https://repositories.intel.com/gpu/ubuntu jammy/lts/2350 unified" >>/etc/apt/sources.list.d/openvino.list && \
   curl -s https://repositories.intel.com/gpu/intel-graphics.key | gpg --dearmor | tee /usr/share/keyrings/intel-graphics.gpg >/dev/null && \
   {% endif -%}
@@ -54,14 +54,14 @@ RUN \
     libwebp-dev \
     meson \
     pkg-config \
-    {% if machine_learning == True and gpu_acceleration_name != "openvino" -%}
+    {% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
     python3-dev \
     {% endif -%}
     unzip && \
   echo "**** install runtime packages ****" && \
   apt-get install --no-install-recommends -y \
     $(if [ $(arch) = "x86_64" ]; then echo "intel-media-va-driver-non-free"; fi) \
-    {% if machine_learning == True and gpu_acceleration_name == "cuda" -%}
+    {% if machine_learning_provider == "cuda" -%}
     libcublas12 \
     libcublaslt12 \
     libcudart12 \
@@ -93,18 +93,21 @@ RUN \
     mesa-va-drivers \
     nodejs \
     perl \
-    {% if machine_learning == True and gpu_acceleration_name != "openvino" -%}
+    {% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
     python3 \
     python3-pip \
     python3-venv \
     {% endif -%}
     zlib1g && \
-  {% if machine_learning == True and gpu_acceleration_name == "openvino" -%}
-  echo "**** install dev-dependencies for python 3.10 ****" && \
+  {% if machine_learning_provider == "openvino" -%}
+  echo "**** install openvino dependencies ****" && \
   apt-get install --no-install-recommends -y \
     intel-level-zero-gpu \
     intel-opencl-icd \
     level-zero \
+    ocl-icd-libopencl1 && \
+  echo "**** install dev-dependencies for python 3.10 ****" && \
+  apt-get install --no-install-recommends -y \
     libbz2-dev \
     libc6-dev \
     libffi-dev \
@@ -112,7 +115,6 @@ RUN \
     libreadline-dev \
     libsqlite3-dev \
     libssl-dev \
-    ocl-icd-libopencl1 \
     zlib1g-dev && \
   echo "**** compile python 3.10 ****" && \
   mkdir -p /tmp/python && \
@@ -128,7 +130,7 @@ RUN \
   echo "**** create folders ****" && \
   mkdir -p \
     /app/immich/geodata \
-    {% if machine_learning == True -%}
+    {% if machine_learning_provider -%}
     /app/immich/machine-learning/ann \
     {% endif -%}
     /app/immich/server \
@@ -217,16 +219,16 @@ RUN \
     build/* \
     static \
     /app/immich/server/www && \
-  {% if machine_learning == True -%}
+  {% if machine_learning_provider -%}
   echo "**** build machine-learning ****" && \
   cd /tmp/immich/machine-learning && \
-  {% if gpu_acceleration_name == "openvino" -%}
-  python3.10 -m pip install -U --no-cache-dir \
+  {% if machine_learning_provider == "openvino" -%}
+  python3.10 -m pip install --disable-pip-version-check -U --no-cache-dir \
     poetry \
     virtualenv && \
   python3.10 -m venv /lsiopy && \
   {% else -%}
-  pip install --break-system-packages -U --no-cache-dir \
+  pip install --disable-pip-version-check --break-system-packages -U --no-cache-dir \
     poetry && \
   python3 -m venv /lsiopy && \
   {% endif -%}
@@ -241,24 +243,24 @@ RUN \
   cp -a \
     ann/ann.py \
     /app/immich/machine-learning/ann && \
-  {% if gpu_acceleration_name == "openvino" -%}
-  poetry add --lock --no-interaction --no-ansi --group openvino openvino==2023.1.0 && \
-  {% elif gpu_acceleration_name == "cuda" -%}
+  {% if machine_learning_provider == "openvino" -%}
+  poetry add --lock --no-interaction --no-ansi --group openvino openvino==2023.3.0 && \
+  {% elif machine_learning_provider == "cuda" -%}
   echo "**** download libcudnn ****" && \
   curl -o "/tmp/libcudnn8.deb" -L \
     "https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/libcudnn8_8.9.7.29-1+cuda12.2_amd64.deb" && \
   dpkg -i "/tmp/libcudnn8.deb" && \
   {% endif -%}
-  poetry install --sync --no-interaction --no-ansi --no-root --with {% if gpu_acceleration_name == "cuda" %}cuda{% elif gpu_acceleration_name == "openvino" %}openvino{% else %}cpu{% endif %} --without dev && \
+  poetry install --sync --no-interaction --no-ansi --no-root --with {% if machine_learning_provider == "cuda" %}cuda{% elif machine_learning_provider == "openvino" %}openvino{% else %}cpu{% endif %} --without dev && \
   {% endif -%}
   echo "**** cleanup ****" && \
-  {% if machine_learning == True -%}
+  {% if machine_learning_provider -%}
   for cleanfiles in *.pyc *.pyo; do \
     find /usr/local/lib/python3.* /usr/lib/python3.* /lsiopy/lib/python3.* -name "${cleanfiles}" -delete; \
   done && \
   {% endif -%}
   apt-get remove -y --purge \
-    {% if machine_learning == True and gpu_acceleration_name == "openvino" -%}
+    {% if machine_learning_provider and machine_learning_provider == "openvino" -%}
     libbz2-dev \
     libc6-dev \
     libffi-dev \
@@ -289,7 +291,7 @@ RUN \
     libwebp-dev \
     meson \
     pkg-config \
-    {% if machine_learning == True and gpu_acceleration_name != "openvino" -%}
+    {% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
     python3-dev \
     python3-pip \
     {% endif -%}
@@ -298,7 +300,7 @@ RUN \
   apt-get clean && \
   rm -rf \
     /etc/apt/sources.list.d/node.list \
-    {% if machine_learning == True and gpu_acceleration_name == "openvino" -%}
+    {% if machine_learning_provider == "openvino" -%}
     /etc/apt/sources.list.d/openvino.list \
     /usr/share/keyrings/intel-graphics.gpg \
     {% endif -%}
