--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -22,7 +22,7 @@ ENV \
   IMMICH_WEB_ROOT="/app/immich/server/www" \
   NVIDIA_DRIVER_CAPABILITIES="compute,video,utility" \
   SERVER_PORT="8080"
-  
+
 # run build
 RUN \
   echo "**** install build packages ****" && \
@@ -54,7 +54,7 @@ RUN \
     libwebp-dev \
     meson \
     pkg-config \
-    {% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
+    {% if machine_learning_provider and machine_learning_provider != "openvino" -%}
     python3-dev \
     {% endif -%}
     unzip && \
@@ -93,7 +93,7 @@ RUN \
     mesa-va-drivers \
     nodejs \
     perl \
-    {% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
+    {% if machine_learning_provider and machine_learning_provider != "openvino" -%}
     python3 \
     python3-pip \
     python3-venv \
@@ -260,7 +260,7 @@ RUN \
   done && \
   {% endif -%}
   apt-get remove -y --purge \
-    {% if machine_learning_provider and machine_learning_provider == "openvino" -%}
+    {% if machine_learning_provider == "openvino" -%}
     libbz2-dev \
     libc6-dev \
     libffi-dev \
@@ -291,7 +291,7 @@ RUN \
     libwebp-dev \
     meson \
     pkg-config \
-    {% if machine_learning_provider is not none and machine_learning_provider != "openvino" -%}
+    {% if machine_learning_provider and machine_learning_provider != "openvino" -%}
     python3-dev \
     python3-pip \
     {% endif -%}
