feat: update to noble (#1)
* update to noble

* fix: remove unused files

* update template

* udpate docker tag

* fix: tags

* fix: remove intel gpg

* add tag

* fix: docker tags

* use ffmpeg noble

* fix: ffmpeg version

* compile python

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,10 +1,13 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/imagegenius/baseimage-ubuntu:mantic
+FROM ghcr.io/martabal/baseimage-ubuntu:noble
 
 # set version label
 ARG BUILD_DATE
 ARG IMMICH_VERSION
+{% if machine_learning_provider -%}
+ARG PYTHON_VERSION={% if machine_learning_provider != "openvino" -%}3.11.9{% else -%}3.10.13{% endif -%}
+{% endif %}
 LABEL build_version="Build-date:- ${BUILD_DATE}"
 LABEL maintainer="martabal"
 
@@ -25,6 +28,20 @@ ENV \
 
 # run build
 RUN \
+  echo "**** create folders ****" && \
+  mkdir -p \
+  /app/immich/cli \
+  /app/immich/geodata \
+  {% if machine_learning_provider -%}
+  /app/immich/machine-learning/ann \
+  {% endif -%}
+  /app/immich/server/www \
+  /tmp/immich-dependencies \
+  /tmp/immich \
+  /tmp/node_modules && \
+  {% if machine_learning_provider -%}
+  SHORT_PYTHON_VERSION=$(echo $PYTHON_VERSION | sed 's/\([0-9]*\.[0-9]*\).*/\1/') && \
+  {% endif -%}
   echo "**** install build packages ****" && \
   echo "deb [signed-by=/usr/share/keyrings/nodesource-repo.gpg] https://deb.nodesource.com/node_20.x nodistro main" >>/etc/apt/sources.list.d/node.list && \
   curl -s https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor | tee /usr/share/keyrings/nodesource-repo.gpg >/dev/null && \
@@ -54,9 +71,6 @@ RUN \
     libwebp-dev \
     meson \
     pkg-config \
-    {% if machine_learning_provider and machine_learning_provider != "openvino" -%}
-    python3-dev \
-    {% endif -%}
     unzip && \
   echo "**** install runtime packages ****" && \
   apt-get install --no-install-recommends -y \
@@ -93,12 +107,8 @@ RUN \
     mesa-va-drivers \
     nodejs \
     perl \
-    {% if machine_learning_provider and machine_learning_provider != "openvino" -%}
-    python3 \
-    python3-pip \
-    python3-venv \
-    {% endif -%}
     zlib1g && \
+  {% if machine_learning_provider -%}
   {% if machine_learning_provider == "openvino" -%}
   echo "**** install openvino dependencies ****" && \
   apt-get install --no-install-recommends -y \
@@ -106,7 +116,8 @@ RUN \
     intel-opencl-icd \
     level-zero \
     ocl-icd-libopencl1 && \
-  echo "**** install dev-dependencies for python 3.10 ****" && \
+  {% endif -%}
+  echo "**** install dev-dependencies for python ${SHORT_PYTHON_VERSION} ****" && \
   apt-get install --no-install-recommends -y \
     libbz2-dev \
     libc6-dev \
@@ -116,28 +127,17 @@ RUN \
     libsqlite3-dev \
     libssl-dev \
     zlib1g-dev && \
-  echo "**** compile python 3.10 ****" && \
+  echo "**** compile python ${SHORT_PYTHON_VERSION} ****" && \
   mkdir -p /tmp/python && \
   cd /tmp/python && \
   curl -o \
-    /tmp/python/Python-3.10.13.tar.xz -L \
-    "https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tar.xz" && \
-  tar xf /tmp/python/Python-3.10.13.tar.xz && \
-  cd /tmp/python/Python-3.10.13 && \
+    /tmp/python/Python-"$PYTHON_VERSION".tar.xz -L \
+    "https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tar.xz" && \
+  tar xf /tmp/python/Python-"$PYTHON_VERSION".tar.xz && \
+  cd /tmp/python/Python-"$PYTHON_VERSION" && \
   ./configure --with-ensurepip=install --enable-optimizations && \
   make altinstall && \
   {% endif -%}
-  echo "**** create folders ****" && \
-  mkdir -p \
-    /app/immich/cli \
-    /app/immich/geodata \
-    {% if machine_learning_provider -%}
-    /app/immich/machine-learning/ann \
-    {% endif -%}
-    /app/immich/server/www \
-    /tmp/immich-dependencies \
-    /tmp/immich \
-    /tmp/sharp && \
   echo "**** download immich dependencies ****" && \
   curl -o \
     /tmp/immich-dependencies.tar.gz -L \
@@ -147,11 +147,12 @@ RUN \
     /tmp/immich-dependencies --strip-components=1 && \
   echo "**** build immich dependencies ****" && \
   cd /tmp/immich-dependencies/server/bin && \
-  FFMPEG_VERSION=$(jq -cr '.packages[] | select(.name == "ffmpeg").version' /tmp/immich-dependencies/server/bin/build-lock.json) && \
+  # FFMPEG_VERSION=$(jq -cr '.packages[] | select(.name == "ffmpeg").version' /tmp/immich-dependencies/server/bin/build-lock.json) && \
+  FFMPEG_VERSION="6.0.1-6" && \
   TARGETARCH=${TARGETARCH:=$(dpkg --print-architecture)} && \
   curl -o \
     /tmp/ffmpeg.deb -L \
-    "https://github.com/jellyfin/jellyfin-ffmpeg/releases/download/v${FFMPEG_VERSION}/jellyfin-ffmpeg6_${FFMPEG_VERSION}-bookworm_${TARGETARCH}.deb" && \
+    "https://github.com/jellyfin/jellyfin-ffmpeg/releases/download/v${FFMPEG_VERSION}/jellyfin-ffmpeg6_${FFMPEG_VERSION}-noble_${TARGETARCH}.deb" && \
   apt-get install --no-install-recommends -y -f \
     /tmp/ffmpeg.deb && \
   ldconfig /usr/lib/jellyfin-ffmpeg/lib && \
@@ -193,12 +194,12 @@ RUN \
   cp -r \
     node_modules/@img \
     node_modules/exiftool-vendored.pl \
-    /tmp && \
+    /tmp/node_modules && \
   npm run build && \
   npm prune --omit=dev --omit=optional && \
   cp -r \
-    /tmp/@img \
-    /tmp/exiftool-vendored.pl \
+    /tmp/node_modules/@img \
+    /tmp/node_modules/exiftool-vendored.pl \
     node_modules && \
   npm link && \
   npm cache clean --force && \
@@ -235,16 +236,10 @@ RUN \
     /app/immich/cli && \
   echo "**** build machine-learning ****" && \
   cd /tmp/immich/machine-learning && \
-  {% if machine_learning_provider == "openvino" -%}
-  python3.10 -m pip install --disable-pip-version-check -U --no-cache-dir \
+  python"$SHORT_PYTHON_VERSION" -m pip install {% if machine_learning_provider != "openvino" -%}--break-system-packages {% endif -%}--disable-pip-version-check -U --no-cache-dir \
     poetry \
     virtualenv && \
-  python3.10 -m venv /lsiopy && \
-  {% else -%}
-  pip install --disable-pip-version-check --break-system-packages -U --no-cache-dir \
-    poetry && \
-  python3 -m venv /lsiopy && \
-  {% endif -%}
+  python"$SHORT_PYTHON_VERSION" -m venv /lsiopy && \
   poetry config installer.max-workers 10 && \
   poetry config virtualenvs.create false && \
   cp -a \
@@ -304,10 +299,6 @@ RUN \
     libwebp-dev \
     meson \
     pkg-config \
-    {% if machine_learning_provider and machine_learning_provider != "openvino" -%}
-    python3-dev \
-    python3-pip \
-    {% endif -%}
     unzip && \
   apt-get autoremove -y --purge && \
   apt-get clean && \
