--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -38,10 +38,14 @@ RUN \
   /tmp/node_modules && \
   echo "**** install build packages ****" && \
   echo "deb [signed-by=/usr/share/keyrings/nodesource-repo.gpg] https://deb.nodesource.com/node_20.x nodistro main" >>/etc/apt/sources.list.d/node.list && \
-  curl -s https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor | tee /usr/share/keyrings/nodesource-repo.gpg >/dev/null && \
+  curl -s "https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key" | gpg --dearmor | tee /usr/share/keyrings/nodesource-repo.gpg >/dev/null && \
+  {% if machine_learning_provider -%}
+  echo "deb [signed-by=/usr/share/keyrings/deadsnakes.gpg] https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu noble main" >>/etc/apt/sources.list.d/deadsnakes.list && \
+  curl -s "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xF23C5A6CF475977595C89F51BA6932366A755776" | gpg --dearmor | tee /usr/share/keyrings/deadsnakes.gpg >/dev/null && \
   {% if machine_learning_provider == "openvino" -%}
   echo "deb [arch=amd64 signed-by=/usr/share/keyrings/intel-graphics.gpg] https://repositories.intel.com/gpu/ubuntu jammy/lts/2350 unified" >>/etc/apt/sources.list.d/openvino.list && \
-  curl -s https://repositories.intel.com/gpu/intel-graphics.key | gpg --dearmor | tee /usr/share/keyrings/intel-graphics.gpg >/dev/null && \
+  curl -s "https://repositories.intel.com/gpu/intel-graphics.key" | gpg --dearmor | tee /usr/share/keyrings/intel-graphics.gpg >/dev/null && \
+  {% endif -%}
   {% endif -%}
   apt-get update && \
   apt-get install --no-install-recommends -y \
@@ -103,22 +107,17 @@ RUN \
     perl \
     {% if machine_learning_provider -%}
     python3-pip \
-    software-properties-common \
-    {% endif -%}
-    zlib1g && \
-    {% if machine_learning_provider -%}
-  add-apt-repository ppa:deadsnakes/ppa && \
-  apt-get install --no-install-recommends -y \
     {% if machine_learning_provider == "openvino" %}
     python3.10-dev \
     python3.10-venv \
-    python3.10 && \
+    python3.10 \
     {% else -%}
     python3.11-dev \
     python3.11-venv \
-    python3.11 && \
+    python3.11 \
     {% endif -%}
     {% endif -%}
+    zlib1g && \
   echo "**** download immich dependencies ****" && \
   curl -o \
     /tmp/immich-dependencies.tar.gz -L \
@@ -258,7 +257,6 @@ RUN \
     python3.11-venv \
     {% endif -%}
     python3-pip \
-    software-properties-common \
     {% endif -%}
     autoconf \
     bc \
@@ -286,14 +284,18 @@ RUN \
   apt-get clean && \
   rm -rf \
     /etc/apt/sources.list.d/node.list \
+    {% if machine_learning_provider -%}
+    /etc/apt/sources.list.d/deadsnakes.list \
+    /usr/share/keyrings/deadsnakes.gpg \
     {% if machine_learning_provider == "openvino" -%}
     /etc/apt/sources.list.d/openvino.list \
     /usr/share/keyrings/intel-graphics.gpg \
     {% endif -%}
+    {% endif -%}
     /root/.cache \
     /root/.npm \
     /tmp/* \
-    /usr/share/keyrings/nodesource.gpg \
+    /usr/share/keyrings/nodesource-repo.gpg \
     /var/tmp/* \
     /var/lib/apt/lists/*
 
