fix: add missing package

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -103,6 +103,7 @@ RUN \
     libwebpdemux2 \
     libwebpmux3 \
     mesa-va-drivers \
+    mesa-vulkan-drivers \
     nodejs \
     perl \
     {% if machine_learning_provider -%}
