fix: add missing package

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -102,6 +102,7 @@ RUN \
     libwebp7 \
     libwebpdemux2 \
     libwebpmux3 \
+    mesa-utils \
     mesa-va-drivers \
     mesa-vulkan-drivers \
     nodejs \
