--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -12,6 +12,7 @@ LABEL maintainer="martabal"
 
 # environment settings
 ENV \
+  IMMICH_ENV="production" \
   {% if machine_learning_provider -%}
   IMMICH_MACHINE_LEARNING_URL="http://127.0.0.1:3003" \
   MACHINE_LEARNING_CACHE_FOLDER="/config/machine-learning" \
@@ -25,9 +26,9 @@ ENV \
   {% endif -%}
   IMMICH_MEDIA_LOCATION="/photos" \
   IMMICH_REVERSE_GEOCODING_ROOT="/app/immich/geodata" \
+  IMMICH_PORT="8080" \
   IMMICH_WEB_ROOT="/app/immich/server/www" \
-  NVIDIA_DRIVER_CAPABILITIES="compute,video,utility" \
-  SERVER_PORT="8080"
+  NVIDIA_DRIVER_CAPABILITIES="compute,video,utility"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
